# Beak

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
src/beak/: __init__.py  browser.py  cli.py  client.py  config.py  history.py  jobs.py  main.py  playwright_edge.py  schemas.py  semantic.py  worker.py
src/beak/webui/: index.html
tests/: test_schemas.py
workers/Beak.WebView2Worker/: Beak.WebView2Worker.csproj  Program.cs
